crates/ml2_mem/tests/ui/memenum_missing_discriminant.stderr
error: MemEnum variant `B` needs an explicit discriminant (e.g. `= 3`)
  --> tests/ui/memenum_missing_discriminant.rs:12:5
   |
12 |     B, // deliberately no `= <int>`
   |     ^
